<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true">

    <RelativeLayout
            android:id="@+id/list_labels"
            android:layout_width="0dp"
            android:layout_height="@dimen/size_s17"
            android:background="@color/grey_b"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintLeft_creator="1">

        <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_s1"
                android:layout_alignParentBottom="true"
                android:background="@color/grey_c" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="@dimen/spacing_s6"
                android:gravity="center"
                android:text="@string/selected_items"
                android:textAllCaps="true"
                android:textSize="@dimen/text_s2"
                android:textStyle="bold" />

        <TextView
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/spacing_s6"
                android:gravity="center"
                android:text="@string/clear_items"
                android:textAllCaps="true"
                android:textColor="@color/red"
                android:textSize="@dimen/text_s2"
                android:textStyle="bold" />

    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/total_panel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/grey_b"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

        <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/grey_c"
                android:id="@+id/view2"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
                android:id="@+id/loyalty_container"
                android:layout_width="0dp"
                android:layout_height="@dimen/size_s20"
                android:visibility="gone"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view2"
                app:layout_constraintVertical_chainStyle="packed">

            <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/size_s1"
                    android:layout_alignParentBottom="true"
                    android:background="@color/grey_c" />

            <TextView
                    android:id="@+id/loyalty_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:padding="0dp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_s4"
                    android:visibility="gone" />

        </RelativeLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/breakdown_recycler_wrap"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:maxHeight="@dimen/size_s28"

                app:layout_constraintBottom_toTopOf="@+id/total_panel_values"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintHeight_default="wrap"
                app:layout_constraintTop_toBottomOf="@+id/loyalty_container">

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/adjustment_recyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    tools:listitem="@layout/cart_adjustment_item"
                    tools:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <RelativeLayout
                android:id="@+id/total_panel_values"
                android:layout_width="0dp"
                android:layout_height="@dimen/size_s15"
                app:layout_constraintBottom_toTopOf="@+id/cart_button_wrapper"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintVertical_chainStyle="packed"
        >


            <TextView
                    style="@style/label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/spacing_s8"
                    android:padding="0dp"
                    android:text="@string/total_label"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_s4" />

            <TextView
                    android:id="@+id/current_total"
                    style="@style/label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/spacing_s3"
                    android:padding="0dp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_s5" />

        </RelativeLayout>

        <LinearLayout
                android:id="@+id/cart_button_wrapper"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintVertical_chainStyle="packed">

            <RelativeLayout
                    android:id="@+id/order_screen_button_wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="@dimen/spacing_s4"
                    app:layout_constraintVertical_weight="3">

                <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/size_s1"
                        android:layout_alignParentTop="true"
                        android:background="@color/grey_c" />

                <Button
                        android:id="@+id/checkout"
                        style="@style/Bypass.Button.Action.FullWidth"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginBottom="@dimen/spacing_s1"
                        android:layout_marginLeft="@dimen/spacing_s6"
                        android:layout_marginRight="@dimen/spacing_s4"
                        android:layout_marginTop="@dimen/spacing_s6"
                        android:text="@string/checkout" />

                <Button
                        android:id="@+id/add_to_tab"
                        style="@style/Bypass.Button.Action.FullWidth"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginBottom="@dimen/spacing_s1"
                        android:layout_marginLeft="@dimen/spacing_s6"
                        android:layout_marginRight="@dimen/spacing_s4"
                        android:layout_marginTop="@dimen/spacing_s6"
                        android:text="@string/add_to_tab"
                        android:visibility="gone" />

                <LinearLayout
                        android:id="@+id/quick_pay"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/checkout"
                        android:layout_marginLeft="@dimen/spacing_s6"
                        android:layout_marginRight="@dimen/spacing_s4">

                    <Button
                            android:id="@+id/cash"
                            style="@style/Bypass.Button"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/spacing_s1"
                            android:layout_weight="1"
                            android:minHeight="@dimen/size_s21"
                            android:text="@string/exact_cash" />

                    <Button
                            android:id="@+id/credit"
                            style="@style/Bypass.Button"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/spacing_s1"
                            android:layout_weight="1"
                            android:minHeight="@dimen/size_s21"
                            android:text="@string/quick_credit" />
                </LinearLayout>

            </RelativeLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/items_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/white"
            android:divider="@color/grey_b"
            app:layout_constraintBottom_toTopOf="@+id/total_panel"
            app:layout_constraintLeft_toLeftOf="@+id/total_panel"
            app:layout_constraintRight_toRightOf="@+id/total_panel"
            app:layout_constraintTop_toBottomOf="@+id/list_labels" />

</androidx.constraintlayout.widget.ConstraintLayout>
